--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -7,7 +7,7 @@
     tools:context=".presentation.ui.splash.SplashFragment">
 
     <ProgressBar
-        android:paddingBottom="@dimen/margin_100_dp"
+        android:layout_marginBottom="@dimen/margin_60_dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
